fix: events cleanup & spacing issue

--- a/apps/the_monkeys/src/components/editor/customBlocks/TagUserBlock/style.css
+++ b/apps/the_monkeys/src/components/editor/customBlocks/TagUserBlock/style.css
@@ -114,7 +114,7 @@
   display: inline-flex;
   align-items: center;
   gap: 6px;
-  padding: 2px 8px 2px 4px;
+  padding: 2px 4px;
   margin: 0 2px;
   font-weight: 600;
   border-radius: 30px;
